# tauri-plugin-mobile-payments

./: .gitignore  Cargo.toml  README.md  build.rs  devshell.nix  flake.nix  package.json
.cargo/: config.toml
.changes/: config.json  initial-release.md  readme.md
android/: .gitignore  build.gradle.kts  gradle.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt  MobilePaymentsInstrumentedTest.kt
android/src/main/java/: MobilePayments.kt  MobilePaymentsPlugin.kt
android/src/test/java/: ExampleUnitTest.kt  MobilePaymentsUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: mobile.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: Greet.svelte
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_product_list.toml  get_product_price.toml  purchase.toml  start_connection.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
webview-src/: .gitignore  index.ts  rollup.config.js  tsconfig.json
