[package]
name = "tauri-plugin-mobile-payments"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-mobile-payments"

[dependencies]
tauri = { version = "2.0.0-alpha.20" }
serde = "1.0"
thiserror = "1.0"
log = "0.4.20"
tsync = "1"
anyhow = "1.0.79"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.13" }
