[package]
name = "tauri-plugin-mobile-payments"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-mobile-payments"

[dependencies]
tauri = { version = "2.0.0-beta.8" }
serde = "1.0"
thiserror = "1.0"
log = "0.4.20"
tsync = "2.1.0"
anyhow = "1.0.79"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.6", features = ["build"] }
